# credit_card

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg
db/: README.md
db/src/: cscheme  logs.sql  user.sql
helm/src/: Chart.yaml  values.yaml
helm/src-auth/: Chart.yaml  values.yaml
helm/src-auth/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
helm/src-auth/values/: test.yaml
helm/src-verify/: Chart.yaml  values.yaml
helm/src-verify/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
helm/src-verify/values/: test.yaml
helm/src/templates/: deployment.yaml
helm/src/values/: test.yaml
k8s/src/: configmap_src.yaml  deployment_src.yaml  secret_src.yaml  service_src.yaml
k8s/src_auth/: configmap_src-auth.yaml  deployment_src-auth.yaml  secret_src-auth.yaml  service_src_auth.yaml
k8s/src_verify/: configmap_src-verify.yaml  deployment_src-verify.yaml  secret_src-verify.yaml  service_src_verify.yaml
src/: Dockerfile  alembic.ini
src/app/: middlewares.py  service.py
src/app/config/: config.py  database.py
src/app/migrations/: env.py
src/app/models/: __init__.py  log.py  user.py
src/app/schemas/: log.py  user.py
src/app/user/: controller.py
src/app/views/: user.py
src/tests/: conftest.py
src/tests/integration/: test_integration.py
src/tests/unit/: test_log.py  test_user.py
src_auth/: .env  Dockerfile
src_auth/app/: service.py
src_auth/tests/: utils.py
src_verify/: Dockerfile
src_verify/app/: service.py
(+14 files in other folders)
